--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,5 @@
 <%= @user.phone %>, <%= @user.prompt %>
+
+<a href="localhost:3000/show" class="dwolla_button" data-name="The Lean Poet" data-desc="Poems sent via text" data-amount="5" data-shipping="0.99" data-tax="0" data-key="6cj6zmeGpMIqYdueC3aIG1YW3QCyNdbJ+PeYB9oRFnYeh5o9eh">Text me a poem</a>
+
+<script type="text/javascript" src="https://www.dwolla.com/scripts/button.min.js"> </script>
