--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+<head>
+</head>
+<body>
 <% provide(:title, 'Sign up') %>
 <h1>Sign up</h1>
 
@@ -16,8 +20,11 @@
       <%= f.text_field :bid %>
 <br />
 <br />
-
-      <%= f.submit "Text Me a Poem!", class: "btn btn-large btn-primary" %>
+      <%= f.submit "Text Me a Poem!", class: "btn btn-large btn-primary"%>      
+      
     <% end %>
   </div>
 </div>
+<script type="text/javascript" src="https://www.dwolla.com/scripts/button.min.js"> </script>
+</body>
+</html>
