added a jquery slider

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,23 @@
 <!DOCTYPE html>
 <head>
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.0/themes/base/jquery-ui.css" />
+        <script src="http://code.jquery.com/jquery-1.8.2.js"></script>
+        <script src="http://code.jquery.com/ui/1.9.0/jquery-ui.js"></script>
+        <link rel="stylesheet" href="/resources/demos/style.css" />
+        <script>
+        $(function() {
+            $( "#slider" ).slider({
+                value:100,
+                min: 0,
+                max: 500,
+                step: 50,
+                slide: function( event, ui ) {
+                    $( "#amount" ).val( "$" + ui.value );
+                }
+            });
+            $( "#amount" ).val( "$" + $( "#slider" ).slider( "value" ) );
+        });
+        </script>
 </head>
 <body>
     
@@ -21,5 +39,13 @@
 
 
 <script type="text/javascript" src="https://www.dwolla.com/scripts/button.min.js"> </script>
+
+<p>
+    <label for="amount">Donation amount ($50 increments):</label>
+    <input type="text" id="amount" style="border: 0; color: #f6931f; font-weight: bold;" />
+</p>
+ 
+<div id="slider"></div>
+
 </body>
 </html>
