--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -59,6 +59,7 @@ input, textarea, select, .uneditable-input {
  }
  #page-wrapper {
    position: relative;
+   width: 980px;
    /* centers the document */
    margin: 0 auto;
    /*
@@ -73,275 +74,176 @@ input, textarea, select, .uneditable-input {
    margin: 0;
  }
  .rectangle {
-     background: #7abcff; /* Old browsers */
-     background: -moz-linear-gradient(top,  #7abcff 0%, #60abf8 44%, #4096ee 100%); /* FF3.6+ */
-     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7abcff), color-stop(44%,#60abf8), color-stop(100%,#4096ee)); /* Chrome,Safari4+ */
-     background: -webkit-linear-gradient(top,  #7abcff 0%,#60abf8 44%,#4096ee 100%); /* Chrome10+,Safari5.1+ */
-     background: -o-linear-gradient(top,  #7abcff 0%,#60abf8 44%,#4096ee 100%); /* Opera 11.10+ */
-     background: -ms-linear-gradient(top,  #7abcff 0%,#60abf8 44%,#4096ee 100%); /* IE10+ */
-     background: linear-gradient(to bottom,  #7abcff 0%,#60abf8 44%,#4096ee 100%); /* W3C */
-     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7abcff', endColorstr='#4096ee',GradientType=0 ); /* IE6-9 */
-   border: none;
-     -moz-box-shadow: 0px 3px 20px 0px #000000;
-     -webkit-box-shadow: 0px 3px 20px 0px #000000;
-     -o-box-shadow: 0px 3px 20px 0px #000000;
-     box-shadow: 0px 3px 20px 0px #000000;
+   background: transparent;
+   border: 2px solid #000000;
+   -moz-box-shadow: 0px 1px 2px 0px #000000;
+   -webkit-box-shadow: 0px 1px 2px 0px #000000;
+   -o-box-shadow: 0px 1px 2px 0px #000000;
+   box-shadow: 0px 1px 2px 0px #000000;
+   border-radius: 2px;
    margin: 0px;
-   width: 978px;
-   height: 478px;
+   width: 254px;
+   height: 284px;
    position: absolute;
-   top: 0px;
-   left: 0px;
+   top: 220px;
+   left: 140px;
+ }
+ .textinput {
+   width: 239px;
+   height: 54px;
+   padding: 5px 8px;
+   font-size: 24pt;
+   font-family:'Helvetica Neue';
+   color: #333333;
+   background-color: #ffffff;
+   border: 1px solid #cfcfcf;
+   border-radius: 3px;
+   -moz-box-shadow: rgba(0, 0, 0, 0.0980392) 0px 1px 8px 0px inset;
+   -webkit-box-shadow: rgba(0, 0, 0, 0.0980392) 0px 1px 8px 0px inset;
+   -o-box-shadow: rgba(0, 0, 0, 0.0980392) 0px 1px 8px 0px inset;
+   box-shadow: rgba(0, 0, 0, 0.0980392) 0px 1px 8px 0px inset;
+   font-weight: normal;
+   text-decoration: none;
+   position: absolute;
+   top: 253px;
+   left: 420px;
  }
  .dom-heading {
    background-color: rgba(0, 0, 0, 0);
-   font-family:'helvetica neue';
+   font-family: Arial;
    border: none;
-   font-size: 32pt;
+   font-size: 14pt;
    overflow: hidden;
-   width: 819px;
-   height: 116px;
+   width: 402px;
+   height: 36px;
    color: #333333;
    font-weight: bold;
    text-decoration: none;
    text-align: left;
-   line-height: 1.2;
+   line-height: 1.4814814814814814;
    position: absolute;
-   top: 122px;
-   left: 41px;
+   top: 222px;
+   left: 421px;
  }
  .dom-heading-1 {
    background-color: rgba(0, 0, 0, 0);
-   font-family:'helvetica neue';
+   font-family: Arial;
    border: none;
-   font-size: 20pt;
+   font-size: 14pt;
    overflow: hidden;
-   width: 300px;
-   height: 50px;
+   width: 340px;
+   height: 30px;
    color: #333333;
    font-weight: bold;
    text-decoration: none;
    text-align: left;
-   line-height: 1.2;
+   line-height: 1.4814814814814814;
    position: absolute;
-   top: 266px;
-   left: 39px;
+   top: 341px;
+   left: 419px;
  }
- .dom-heading-2 {
-   background-color: rgba(0, 0, 0, 0);
-   font-family:'helvetica neue';
-   border: none;
-   font-size: 20pt;
-   overflow: hidden;
-   width: 400px;
-   height: 50px;
+ .textinput-1 {
+   width: 239px;
+   font-size: 24pt;
+   font-family:'Helvetica Neue';
    color: #333333;
-   font-weight: bold;
+   background-color: #ffffff;
+   border: 1px solid #cfcfcf;
+   border-radius: 3px;
+   -moz-box-shadow: rgba(0, 0, 0, 0.0980392) 0px 1px 8px 0px inset;
+   -webkit-box-shadow: rgba(0, 0, 0, 0.0980392) 0px 1px 8px 0px inset;
+   -o-box-shadow: rgba(0, 0, 0, 0.0980392) 0px 1px 8px 0px inset;
+   box-shadow: rgba(0, 0, 0, 0.0980392) 0px 1px 8px 0px inset;
+   font-weight: normal;
    text-decoration: none;
-   text-align: left;
-   line-height: 1.2;
    position: absolute;
-   top: 266px;
-   left: 265px;
+   top: 372px;
+   left: 420px;
+
  }
- .basic-button {
-   width: 185px;
-   height: 57px;
-   border-radius: 8px;
+ .flat-button {
+   width: 218px;
+   height: 38px;
+   border-radius: 20px;
    color: #ffffff;
    font-family:'Helvetica Neue';
    font-size: 12pt;
-   font-weight: 400;
-   border: 1px solid #0054a3;
-   background-color: #3d88cc;
-   background-image: -moz-linear-gradient(top, #3d88cc 0%, #035199 100%);
-   background-image: -webkit-linear-gradient(top, #3d88cc 0%, #035199 100%);
-   background-image: -o-linear-gradient(top, #3d88cc 0%, #035199 100%);
-   background-image: linear-gradient(top, #3d88cc 0%, #035199 100%);
-   text-decoration: none;
-   text-shadow: rgba(255, 255, 255, 0.701961) 0px 0px 10px;
-   position: absolute;
-   top: 310px;
-   left: 535px;
- }
- .textinput {
-   width: 200px;
-   height: 47px;
-   padding: 5px 8px;
-   font-size: 18pt;
-   font-family:'Helvetica Neue';
-   color: #333333;
-   background-color: #ffffff;
-   border: 1px solid #cfcfcf;
-   border-radius: 2px;
-   -moz-box-shadow: rgba(0, 0, 0, 0.0980392) 0px 0px 7px 0px inset;
-   -webkit-box-shadow: rgba(0, 0, 0, 0.0980392) 0px 0px 7px 0px inset;
-   -o-box-shadow: rgba(0, 0, 0, 0.0980392) 0px 0px 7px 0px inset;
-   box-shadow: rgba(0, 0, 0, 0.0980392) 0px 0px 7px 0px inset;
-   font-weight: normal;
-   text-decoration: none;
-   position: absolute;
-   top: 317px;
-   left: 265px;
- }
- .textinput-1 {
-   width: 160px;
-   height: 47px;
-   padding: 5px 8px;
-   font-size: 18pt;
-   font-family:'Helvetica Neue';
-   color: #333333;
-   background-color: #ffffff;
-   border: 1px solid #cfcfcf;
-   border-radius: 2px;
-   -moz-box-shadow: rgba(0, 0, 0, 0.0980392) 0px 0px 7px 0px inset;
-   -webkit-box-shadow: rgba(0, 0, 0, 0.0980392) 0px 0px 7px 0px inset;
-   -o-box-shadow: rgba(0, 0, 0, 0.0980392) 0px 0px 7px 0px inset;
-   box-shadow: rgba(0, 0, 0, 0.0980392) 0px 0px 7px 0px inset;
-   font-weight: normal;
-   text-decoration: none;
-   position: absolute;
-   top: 317px;
-   left: 39px;
- }
- .dom-heading-3 {
-   background-color: rgba(0, 0, 0, 0);
-   font-family:'trebuchet ms';
-   border: none;
-   font-size: 64pt;
-   overflow: hidden;
-   width: 980px;
-   height: 91px;
-   color: #333333;
    font-weight: bold;
-   text-decoration: none;
-   text-align: left;
-   line-height: 1.2;
-   text-shadow: rgba(255, 255, 255, 0.498039) 2px 3px 0px;
-   position: absolute;
-   top: 20px;
-   left: 40px;
- }
- .dom-heading-4 {
-   background-color: rgba(0, 0, 0, 0);
-   font-family:'helvetica neue';
+   background-color: #ff5619;
    border: none;
-   font-size: 32pt;
-   overflow: hidden;
-   width: 818px;
-   height: 55px;
-   color: #333333;
-   font-weight: bold;
    text-decoration: none;
-   text-align: left;
-   line-height: 1.2;
    position: absolute;
-   top: 505px;
-   left: 42px;
- }
- .dom-heading-5 {
-   background-color: rgba(0, 0, 0, 0);
-   font-family:'helvetica neue';
-   border: none;
-   font-size: 20pt;
-   overflow: hidden;
-   width: 680px;
-   height: 50px;
-   color: #333333;
-   font-weight: bold;
-   text-decoration: none;
-   text-align: left;
-   line-height: 1.2;
-   position: absolute;
-   top: 570px;
-   left: 40px;
- }
- .dom-heading-6 {
-   background-color: rgba(0, 0, 0, 0);
-   font-family:'helvetica neue';
-   border: none;
-   font-size: 20pt;
-   overflow: hidden;
-   width: 680px;
-   height: 50px;
-   color: #333333;
-   font-weight: bold;
-   text-decoration: none;
-   text-align: left;
-   line-height: 1.2;
-   position: absolute;
-   top: 694px;
-   left: 40px;
- }
- .dom-heading-7 {
-   background-color: rgba(0, 0, 0, 0);
-   font-family:'helvetica neue';
-   border: none;
-   font-size: 16pt;
-   overflow: hidden;
-   width: 555px;
-   height: 94px;
-   color: #333333;
-   font-weight: normal;
-   text-decoration: none;
-   text-align: left;
-   line-height: 1.2;
-   position: absolute;
-   top: 607px;
-   left: 40px;
- }
- .dom-heading-8 {
-   background-color: rgba(0, 0, 0, 0);
-   font-family:'helvetica neue';
-   border: none;
-   font-size: 16pt;
-   overflow: hidden;
-   width: 555px;
-   height: 94px;
-   color: #333333;
-   font-weight: normal;
-   text-decoration: none;
-   text-align: left;
-   line-height: 1.2;
-   position: absolute;
-   top: 732px;
-   left: 40px;
+   top: 465px;
+   left: 418px;
  }
  
- .dom-heading-10 {
-   background-color: rgba(0, 0, 0, 0);
-   font-family:'helvetica neue';
+ 
+ ::-webkit-input-placeholder {
+ }
+
+ :-moz-placeholder {  
+    color: gray;  
+ }
+ 
+ #user_phone{
+     font-size: 24px;
+     height:24px;
+    line-height:24px;
+ }
+ 
+ #user_prompt{
+     font-size: 24px;
+     height:24px;
+     line-height:24px;
+ }
+ 
+ .confirmation-button {
+   width: 431px;
+   height: 95px;
+   border-radius: 20px;
+   color: #000000;
+   font-family:'Helvetica Neue';
+   font-size: 24pt;
+   font-weight: bold;
+   background-color: #ffffff;
+   border: 2px solid #000000;
+   text-decoration: none;
+   text-shadow: #000000 0px 1px 1px;
+   position: absolute;
+   top: 177px;
+   left: 233px;
+ }
+ 
+ .premium-button {
+   width: 218px;
+   height: 38px;
+   border-radius: 20px;
+   color: #ffffff;
+   font-family:'Helvetica Neue';
+   font-size: 12pt;
+   font-weight: bold;
+   background-color: #ff5619;
    border: none;
-   font-size: 20pt;
+   text-decoration: none;
+   position: absolute;
+   top: 304px;
+   left: 445px;
+ }
+ 
+ .premium-upsell {
+   background-color: rgba(0, 0, 0, 0);
+   font-family: Arial;
+   border: none;
+   font-size: 12pt;
    overflow: hidden;
-   width: 680px;
-   height: 50px;
+   width: 188px;
+   height: 23px;
    color: #333333;
    font-weight: bold;
    text-decoration: none;
    text-align: left;
    line-height: 1.2;
    position: absolute;
-   top: 790px;
-   left: 40px;
- }
- .dom-heading-9 {
-   background-color: rgba(0, 0, 0, 0);
-   font-family:'helvetica neue';
-   border: none;
-   font-size: 16pt;
-   overflow: hidden;
-   width: 555px;
-   height: 94px;
-   color: #333333;
-   font-weight: normal;
-   text-decoration: none;
-   text-align: left;
-   line-height: 1.2;
-   position: absolute;
-   top: 827px;
-   left: 40px;
- }
- .container {
-     background-image:url('bedge_grunge.png');
+   top: 315px;
+   left: 237px;
  }
