--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+    <!-- Flash notification>
         <div class="container">
           <% flash.each do |key, value| %>
             <div class="alert alert-<%= key %>"><%= value %></div>
@@ -14,5 +15,6 @@
           <%= yield %>
           <%= debug(params) if Rails.env.development? %>
         </div>
+    -->
 </body>
 </html>
