--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -16,8 +16,10 @@
 <div class="container">
 <!--<% provide(:title, 'Sign up') %> -->
 <div id="page-wrapper">
-    <h2 class="">PoeMMS</h2>
-       <h2 class="">Get an original, personalized poem texted to your cell phone.&nbsp;</h2>
+    <div id="header">
+    <h2 class="title">The Lean Poet</h2>
+    <h2 class="tagline">Fresh, homemade poems delivered to your phone.</h2>
+    </div>
      <div class="rectangle">
      </div>
          <%= form_for(@user) do |f| %>
