--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,7 +16,7 @@
   
   <body>
     <div id="page-wrapper">
-      <button class="confirmation-button">Your poem is on the way.</button>
+      <button type="submit" class="confirmation-button">Your poem is on the way.</button>
       <button class="premium-button">Yeah, I got $5 on it</button>
       <h2 class="premium-upsell">Psst. want a sonnet?</h2>
     </div>
