--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,14 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-    <!-- Flash notification>
         <div class="container">
-          <% flash.each do |key, value| %>
+          <!-- <% flash.each do |key, value| %>
             <div class="alert alert-<%= key %>"><%= value %></div>
-          <% end %>
-          <%= yield %>
+          <% end %>-->
+          <%= yield %> 
           <%= debug(params) if Rails.env.development? %>
         </div>
-    -->
+
 </body>
 </html>
