maybe fixed dwolla

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -227,6 +227,7 @@ input, textarea, select, .uneditable-input {
    position: absolute;
    top: 304px;
    left: 445px;
+   line-height: 38px;
  }
  
  .premium-upsell {
