--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -74,7 +74,7 @@ input, textarea, select, .uneditable-input {
    margin: 0;
  }
  .rectangle {
-   background: transparent;
+   background: url("messagesbg.png") repeat scroll left top transparent;
    border: 2px solid #000000;
    -moz-box-shadow: 0px 1px 2px 0px #000000;
    -webkit-box-shadow: 0px 1px 2px 0px #000000;
@@ -106,7 +106,7 @@ input, textarea, select, .uneditable-input {
    text-decoration: none;
    position: absolute;
    top: 203px;
-   left: 420px;
+   left: 140px;
  }
  .dom-heading {
    background-color: rgba(0, 0, 0, 0);
@@ -123,7 +123,7 @@ input, textarea, select, .uneditable-input {
    line-height: 1.4814814814814814;
    position: absolute;
    top: 172px;
-   left: 421px;
+   left: 140px;
  }
  .dom-heading-1 {
    background-color: rgba(0, 0, 0, 0);
@@ -140,7 +140,7 @@ input, textarea, select, .uneditable-input {
    line-height: 1.4814814814814814;
    position: absolute;
    top: 291px;
-   left: 419px;
+   left: 140px;
  }
  .textinput-1 {
    width: 239px;
@@ -158,7 +158,7 @@ input, textarea, select, .uneditable-input {
    text-decoration: none;
    position: absolute;
    top: 322px;
-   left: 420px;
+   left: 140px;
 
  }
  .flat-button {
@@ -174,7 +174,7 @@ input, textarea, select, .uneditable-input {
    text-decoration: none;
    position: absolute;
    top: 415px;
-   left: 418px;
+   left: 140px;
  }
  
  
@@ -284,4 +284,48 @@ input, textarea, select, .uneditable-input {
  
  a:hover {
      text-decoration:none;
+ }
+ 
+ .gBoxTall {
+ background: url("gBoxTall.png") no-repeat scroll left top transparent;
+ clear: both;
+ float: right;
+ margin-top: 15px;
+ max-width: 270px;
+ padding-left: 22px;
+ }
+
+ .gBoxTall .right {
+ background: url("gBoxTall.png") no-repeat scroll right top transparent;
+ }
+ 
+ .gBoxTall .bottom {
+ background: url("gBoxTall.png") no-repeat scroll left bottom transparent;
+ height: 20px;
+ margin: -10px 0 0 -22px;
+ }
+ 
+ .gBoxTall .bottom .right {
+ background: url("gBoxTall.png") no-repeat scroll right bottom transparent;
+ float: right;
+ height: 20px;
+ width: 43px;
+ }
+ 
+ .gBoxTall .right p {
+ margin-left: -5px;
+ padding: 8px 30px 0 0;
+ color: black;
+ text-shadow: 0px 0px 0px;
+ }
+ 
+ p.message {
+ font: 22px/25px Helvetica, Arial, sans-serif;
+ }
+ 
+ .done {
+     color:green;
+ }
+ .notdone{
+     color:red;
  }
