--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -18,7 +18,7 @@
 <div id="page-wrapper">
     <div id="header">
     <h2 class="title">The Lean Poet</h2>
-    <h2 class="tagline">Fresh, homemade poems delivered to your phone.</h2>
+    <h2 class="lead">Fresh, homemade poems delivered to your phone.</h2>
     </div>
     
          <%= form_for(@user) do |f| %>
