--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Text Me a Poem</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
+      <meta charset="utf-8">
+      <title>Text Me a Poem</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!-- Le styles -->
+      <%= stylesheet_link_tag    "application", :media => "all" %>
+      <%= javascript_include_tag "application" %>
+      <%= csrf_meta_tags %>
+
+      <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet">
+
+      <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+      <!--[if lt IE 9]>
+        <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+      <![endif]-->
+
+    </head>
+    
+
 </head>
 <body>
+    
         <div class="container">
           <!-- <% flash.each do |key, value| %>
             <div class="alert alert-<%= key %>"><%= value %></div>
