--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,26 +1,6 @@
-<!DOCTYPE HTML>
-<html lang="en">
-  
-  <head>
-    <meta charset="utf-8" />
-    <link href="style.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="fontawesome.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Limelight%7CFlamenco%7CFedero%7CYesteryear%7CJosefin+Sans%7CSpinnaker%7CSansita+One%7CHandlee%7CDroid+Sans"
-    media="screen" rel="stylesheet" type="text/css" />
-    <!-- Typekit fonts require an account and a kit containing the fonts used. see https://typekit.com/plans
-    for details. <script type="text/javascript" src="//use.typekit.net/YOUR-KIT-ID.js"></script>
-      <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-    -->
-    <title>Your poem is on its way</title>
-  </head>
-  
-  <body>
     <div id="page-wrapper">
-      <button type="submit" class="confirmation-button">Your poem is on the way.</button>
+      <h1>Your poem is on the way.</h1>
+      <p>Psst. want a sonnet?</p>
       <a href="http://sultry-mesa-9027.herokuapp.com/" class="dwolla_button" data-name="Sonnet" data-desc="A poem of exactly 14 lines" data-amount="5.00" data-shipping="0" data-tax="0" data-key="6cj6zmeGpMIqYdueC3aIG1YW3QCyNdbJ+PeYB9oRFnYeh5o9eh">Yeah, I've got $5 on it</a>
-      <h2 class="premium-upsell">Psst. want a sonnet?</h2>
     </div>
     <script type="text/javascript" src="https://www.dwolla.com/scripts/button.min.js"> </script>
-  </body>
-
-</html>
