--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,24 +19,26 @@
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
-         <div class="navbar-inner">
-           <div class="container">
-             <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-               <span class="icon-bar"></span>
-               <span class="icon-bar"></span>
-               <span class="icon-bar"></span>
-             </a>
-             <a class="brand" href="/">The Lean Poet</a>
-             <div class="nav-collapse collapse">
-               <ul class="nav">
-                 <li class="active"><a href="/log">Backlog</a></li>
-                 <li><a href="#about">About</a></li>
-                 <li><a href="#contact">Contact</a></li>
-               </ul>
-             </div><!--/.nav-collapse -->
-           </div>
-         </div>
-       </div>
+          <div class="navbar-inner">
+            <div class="container">
+              <a class="btn btn-navbar collapsed" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </a>
+              <a class="brand" href="/">PoeMMS</a>
+              <div class="nav-collapse collapse" style="height: 0px;">
+                <ul class="nav">
+                  <li><a href="/log">Backlog</a></li>
+                  <li><a href="/about">About</a></li>
+                  <li><a href="/contact">Contact</a></li>
+                </ul>
+              </div><!--/.nav-collapse -->
+            </div>
+          </div>
+        </div>
+        
+    
         <div class="container">
           <!-- <% flash.each do |key, value| %>
             <div class="alert alert-<%= key %>"><%= value %></div>
