trimmed show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,1 @@
-    <div id="page-wrapper">
-      <h1>Your poem is on the way.</h1>
-      <p>Psst. want a sonnet?</p>
-      <a href="http://sultry-mesa-9027.herokuapp.com/" class="dwolla_button" data-name="Sonnet" data-desc="A poem of exactly 14 lines" data-amount="5.00" data-shipping="0" data-tax="0" data-key="6cj6zmeGpMIqYdueC3aIG1YW3QCyNdbJ+PeYB9oRFnYeh5o9eh">Yeah, I've got $5 on it</a>
-    </div>
-    <script type="text/javascript" src="https://www.dwolla.com/scripts/button.min.js"> </script>
+<p class="lead">Check your phone — your poem is on its way.</p>
