--- a/app/views/user_mailer/request_alert.html.erb
+++ b/app/views/user_mailer/request_alert.html.erb
@@ -9,8 +9,10 @@
       Someone wants a poem about <%= @user.prompt %>.<br/>
     </p>
     <p>
-      Write it here: <%= link_to "Link", :controller => "users", :action => "edit", :id => "#{@user.id}" %>.
+      Write it here: 
     </p>
     <p>Thanks and have a great day!</p>
   </body>
 </html>
+
+<!-- <%= # link_to "Link", :controller => "users", :action => "edit", :id => "#{@user.id}" %>. -->
