--- a/app/views/user_mailer/request_alert.html.erb
+++ b/app/views/user_mailer/request_alert.html.erb
@@ -9,7 +9,7 @@
       Someone wants a poem about <%= @user.prompt %>.<br/>
     </p>
     <p>
-      Write it here: (URL)
+      Write it here:  <%= @url %>
     </p>
     <p>Thanks and have a great day!</p>
   </body>
