--- a/app/assets/stylesheets/bootstrap_and_override.css.less
+++ b/app/assets/stylesheets/bootstrap_and_override.css.less
@@ -4,6 +4,9 @@ body { padding-top: 60px; }
 
 @import "twitter/bootstrap/responsive";
 
+.field_with_errors { display: inline; }
+.error_bullet
+
 // Set the correct sprite paths
 @iconSpritePath: asset-path("twitter/bootstrap/glyphicons-halflings");
 @iconWhiteSpritePath: asset-path("twitter/bootstrap/glyphicons-halflings-white");
@@ -30,3 +33,4 @@ body { padding-top: 60px; }
 //
 // Example:
 // @linkColor: #ff0000;
+
