--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -3,7 +3,7 @@
       <!--The form contains <%= pluralize(@user.errors.count, "error") %>. -->
     <ul>
           <% @user.errors.full_messages.each do |msg| %>
-            <li>* <%= msg %></li>
+            <li class ="error_bullet"><%= msg %></li>
           <% end %>
     </ul>
   </div>
